fix overflow edit profile page

--- a/src/app.scss
+++ b/src/app.scss
@@ -34,7 +34,6 @@ div {
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    width: 100vw;
     text-align: center;
 
     form {
